--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     command:
       - '-config.file=/etc/prometheus/prometheus.yml'
       - '-storage.local.path=/prometheus'
+      - '-storage.local.retention=1h0m0s'
       - '-alertmanager.url=http://alertmanager:9093'
     expose:
       - 9090
@@ -60,6 +61,8 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     expose:
       - 8080
+    ports:
+      - 8080:8080
     networks:
       - back-tier
   
