--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
-    mem_limit: 1000000000
-    memswap_limit: 1000000000
+    mem_limit: 3000000000
+    memswap_limit: 3000000000
     volumes:
       - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
@@ -23,6 +23,7 @@ services:
       - '-config.file=/etc/prometheus/prometheus.yml'
       - '-storage.local.path=/prometheus'
       - '-storage.local.retention=1h0m0s'
+      - '-storage.local.memory-chunks=262144'
     expose:
       - 9090
     ports:
@@ -42,7 +43,7 @@ services:
       - 9100
     networks:
       - back-tier
-      
+
   cadvisor:
     image: google/cadvisor
     mem_limit: 1000000000
